Initial commit with virtual environment and requirements.txt

--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="header">
-            <a href="/" class="logo">Tepe japan</a>
+            <a href="/" class="logo" style="color: chocolate;">Tepejapan</a>
         </div>
 
         <div id="subheader">
